docs/apache-airflow-providers-cncf-kubernetes/3.0.0/_sources/_api/airflow/providers/cncf/kubernetes/hooks/kubernetes/index.rst.txt
:py:mod:`airflow.providers.cncf.kubernetes.hooks.kubernetes`
============================================================

.. py:module:: airflow.providers.cncf.kubernetes.hooks.kubernetes


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.cncf.kubernetes.hooks.kubernetes.KubernetesHook




.. py:class:: KubernetesHook(conn_id: Optional[str] = default_conn_name, client_configuration: Optional[kubernetes.client.Configuration] = None, cluster_context: Optional[str] = None, config_file: Optional[str] = None, in_cluster: Optional[bool] = None)

   Bases: :py:obj:`airflow.hooks.base.BaseHook`

   Creates Kubernetes API connection.

   - use in cluster configuration by using ``extra__kubernetes__in_cluster`` in connection
   - use custom config by providing path to the file using ``extra__kubernetes__kube_config_path``
   - use custom configuration by providing content of kubeconfig file via
       ``extra__kubernetes__kube_config`` in connection
   - use default config by providing no extras

   This hook check for configuration option in the above order. Once an option is present it will
   use this configuration.

   .. seealso::
       For more information about Kubernetes connection:
       :doc:`/connections/kubernetes`

   :param conn_id: The :ref:`kubernetes connection <howto/connection:kubernetes>`
       to Kubernetes cluster.
   :type conn_id: str

   .. py:attribute:: conn_name_attr
      :annotation: = kubernetes_conn_id

      

   .. py:attribute:: default_conn_name
      :annotation: = kubernetes_default

      

   .. py:attribute:: conn_type
      :annotation: = kubernetes

      

   .. py:attribute:: hook_name
      :annotation: = Kubernetes Cluster Connection

      

   .. py:method:: get_connection_form_widgets() -> Dict[str, Any]
      :staticmethod:

      Returns connection widgets to add to connection form


   .. py:method:: get_ui_field_behaviour() -> Dict
      :staticmethod:

      Returns custom field behaviour


   .. py:method:: get_conn(self) -> Any

      Returns kubernetes api session for use with requests


   .. py:method:: api_client(self) -> Any

      Cached Kubernetes API client


   .. py:method:: core_v1_client(self)


   .. py:method:: create_custom_object(self, group: str, version: str, plural: str, body: Union[str, dict], namespace: Optional[str] = None)

      Creates custom resource definition object in Kubernetes

      :param group: api group
      :type group: str
      :param version: api version
      :type version: str
      :param plural: api plural
      :type plural: str
      :param body: crd object definition
      :type body: Union[str, dict]
      :param namespace: kubernetes namespace
      :type namespace: str


   .. py:method:: get_custom_object(self, group: str, version: str, plural: str, name: str, namespace: Optional[str] = None)

      Get custom resource definition object from Kubernetes

      :param group: api group
      :type group: str
      :param version: api version
      :type version: str
      :param plural: api plural
      :type plural: str
      :param name: crd object name
      :type name: str
      :param namespace: kubernetes namespace
      :type namespace: str


   .. py:method:: get_namespace(self) -> Optional[str]

      Returns the namespace that defined in the connection


   .. py:method:: get_pod_log_stream(self, pod_name: str, container: Optional[str] = '', namespace: Optional[str] = None) -> Tuple[kubernetes.watch.Watch, Generator[str, None, None]]

      Retrieves a log stream for a container in a kubernetes pod.

      :param pod_name: pod name
      :type pod_name: str
      :param container: container name
      :param namespace: kubernetes namespace
      :type namespace: str


   .. py:method:: get_pod_logs(self, pod_name: str, container: Optional[str] = '', namespace: Optional[str] = None)

      Retrieves a container's log from the specified pod.

      :param pod_name: pod name
      :type pod_name: str
      :param container: container name
      :param namespace: kubernetes namespace
      :type namespace: str



